    the mapperfile_sdl1 and mapperfile_sdl2 config
    options to override mapperfile option. (Wengier)
  - The menu functions "Load mapper file", "Quick edit
    mode", "Stop clipboard pasting" and "Display state
    information" have been added to the key mapper so
    that you can now define your own shortcut keys to
    activate these functions. (Wengier)
  - Added ttf.fontbold, ttf.fontital, and ttf.fontboit
    config options so that you can specify actual bold
    italic, and bold-italic TrueType fonts for use with
    the TTF output that will render the bold, italic,
    and bold-italic text styles using the actual TTF
    fonts (e.g. consolab, consolai, consolaz instead of
    consola) instead of making the original TTF font
    bold, italic, bold-italic automatically. (Wengier)
  - DOSBox-X now supports the use of arrow keys (left,
    right, up, down, home, end) to select and copy text
    to the host clipboard in addition to a mouse button
    (subject to the specified key modifier, or use the
    QuickEdit function). The arrow keys will move the
    selections; press Home key to start the actual text
    selection and End key to end text selection and to
    copy to the clipboard; press ESC key to cancel text
    selection. Set config option "clip_mouse_button" to
    "arrows" to enable it, or select it from "Shared
    clipboard functions" menu group. (Wengier)
  - You can now press the key combination Ctrl+Tab in
    the shell to see a list of files/directories that
    can be completed by the Tab completion. (Wengier)
  - Added SETCOLOR command to view or change the text-
    mode color scheme settings. Also fixed the color
    palette for the TTF output. (Wengier)
  - Separated "TTF options" menu group that contains
    TrueType font (TTF) related menu options from the
    "Text-mode" menu group in "Video" menu. (Wengier)
  - The "Show menu bar" option now appears in system
    menu of the Windows SDL2 build too. (Wengier)