@@ -118,6 +118,10 @@
     information" have been added to the key mapper so
     that you can now define your own shortcut keys to
     activate these functions. (Wengier)
+  - The default shortcuts for the "Copy to clipboard",
+    "Paste from clipboard", and the "Reset window size"
+    functions are now Ctrl+F5, Ctrl+F6 and Host(F11/F12)
+    +BackSpace respectively. (Wengier)
   - Added ttf.fontbold, ttf.fontital, and ttf.fontboit
     config options so that you can specify actual bold
     italic, and bold-italic TrueType fonts for use with
